log
Fri, Mar 21, 2025 12:09:30 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Fri, Mar 21, 2025  3:46:37 PM: 
 tests:  0|5
total_score: 0/70
2bd9536
Fri, Mar 21, 2025  4:39:52 PM: 
 exercises.c | 40 ++++++++++++++++++++++++++++++++++++++--
 1 file changed, 38 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
c452391
Sat, Mar 22, 2025  2:22:24 PM: 
 exercises.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:134:14: error: implicit declaration of function 'isEmpty' [-Werror=implicit-function-declaration]
          if (isEmpty(pila))
              ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
0b6c1df
Sat, Mar 22, 2025  2:23:35 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 60/70
8fd6031
